# freak

./: .gitignore  CMakeLists.txt  COPYING.txt  README.txt
demo/: CMakeLists.txt  demo.cpp  freak_demo.cpp
doc/: freak.rst
resources/: demo  selected_pairs2
src/: CMakeLists.txt  freak.cpp  freak.h  freak_registration.cpp  hammingseg.h  test_freak.cpp
